Update AccessTokenGenerator.java